Avance en gradiente por descenso, voy en prueba de escritorio

--- a/Gradiente_x_descenso.ipynb
+++ b/Gradiente_x_descenso.ipynb
@@ -19,157 +19,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "import csv\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Descenso_Grad:\n",
-    "    def __init__(self, n_pesos, clase):\n",
-    "        self.n_pesos = n_pesos\n",
-    "        #Se inician pesos en 0\n",
-    "        self.teta0 = np.array([0.0, 0.0, 0.0, 0.0])\n",
-    "        #Se inician teta0 en 0\n",
-    "        self.teta_0 = np.array([0.0])\n",
-    "        #Se inician t en 0\n",
-    "        self.t = np.array([0.0])\n",
-    "        #Se determina el valor de 1 y -1 para las clase\n",
-    "        self.val_clase = { clase[0]:1, clase[1]:-1 }\n",
-    "\n",
-    "    def predice(self, datos):\n",
-    "        #Se obtienen los atributos (en este caso son 4: ancho y alto del sepalo, así como del petalo)\n",
-    "        atributos_x = datos[:self.n_pesos-1]\n",
-    "        #Valida esta parte ØTx(i)+Ø0 = y(i)\n",
-    "        suma_pesos = sum([i*j for i,j in zip(self.pesos[0:self.n_pesos],atributos_x)] + self.teta_0)       \n",
-    "        return 1 if suma_pesos >= 0 else -1\n",
-    "\n",
-    "    def ajusta_pesos(self, clase_real, data):\n",
-    "        self.teta_0 = self.teta_0 + clase_real\n",
-    "        for i in range(0,4):\n",
-    "            self.pesos[i] = self.pesos[i] + clase_real * data[i]\n",
-    "\n",
-    "    def entrenamiento(self, eta, J):\n",
-    "        # Se crea arreglo para guardar los pesos que se van calculando\n",
-    "        grad_pesos = [self.pesos]\n",
-    "        tets = [self.teta_0]\n",
+    "def costo(teta,teta0,data,n):#Función Objetivo J(Ø,Ø0)\n",
+    "    suma = np.array([0.0])\n",
+    "    yi = 0\n",
+    "    \n",
+    "    for i in data:\n",
+    "        if(i[4] == 0):\n",
+    "            yi = -1\n",
+    "        else:\n",
+    "            yi = 1\n",
+    "                \n",
+    "        x = i[:len(i)-1]\n",
+    "        suma = yi * ((np.dot(np.array(teta).transpose(),np.array(x))) + teta0)\n",
     "        \n",
-    "        while True:  \n",
+    "        if suma < 1:\n",
+    "            Lh = -1\n",
+    "        else:\n",
+    "            Lh = 0\n",
+    "        \n",
+    "        suma =  suma + Lh * yi\n",
+    "            \n",
+    "    return ((1/n)*suma)\n",
+    "\n",
+    "def descenso_x_gradiente(data, eta, Oini, O0ini, lamda):\n",
+    "        # Se crea arreglo para guardar los pesos que se van calculando\n",
+    "        O = []\n",
+    "        O0 = []\n",
+    "        O.append(Oini)\n",
+    "        O0.append(O0ini)\n",
+    "        \n",
+    "        Ot = []\n",
+    "        Ot0 = []\n",
+    "        \n",
+    "        n = len(data)\n",
+    "        t = 0\n",
+    "        \n",
+    "        my_list = [1,2]\n",
+    "        \n",
+    "        #while True:  \n",
+    "        for j in my_list:\n",
     "            t = t + 1\n",
-    "            sumaO = 0.0\n",
-    "            sumaO0 = 0.0\n",
-    "            for i in n:\n",
-    "                clase_real = self.val_clase[i[len(i)-1]]#Se guarda la clase real de esa observación yi    \n",
-    "                #Se obtienen los atributos (en este caso son 4: ancho y alto del sepalo, así como del petalo)\n",
-    "                atributos_x = datos[:self.n_pesos-1]\n",
-    "                #Valida esta parte y(i)(Ø(t-1)Tx(i)+Ø(t-1)0)      \n",
-    "                hip = self.val_clase[i[len(i)-1]] * ((np.dot(np.array(self.pesos),np.array(atributos_x).transpose())) + self.teta_0)\n",
+    "            sumaO = np.array([0.0, 0.0, 0.0, 0.0])\n",
+    "            sumaO0 = np.array([0.0])\n",
+    "            #for i in data:\n",
+    "            for i in data:\n",
+    "                print(i)\n",
+    "                print('i[4]: ' + str(i[4]))\n",
+    "                if(i[4] == 0):\n",
+    "                    yi = -1\n",
+    "                else:\n",
+    "                    yi = 1\n",
+    "                    \n",
+    "                x = i[:len(i)-1]\n",
+    "                print('x: ' + str(x))\n",
+    "                #Valida esta parte y(i)(Ø(t-1)Tx(i)+Ø0(t-1)) \n",
+    "                print('O: ' + str(O[t-1]))\n",
+    "                print(np.array(x).transpose())\n",
+    "                print(np.dot(np.array(O[t-1]).transpose(),np.array(x)))\n",
+    "                print(O0[t-1])\n",
+    "                hip = yi * ((np.dot(np.array(O[t-1]).transpose(),np.array(x))) + O0[t-1])\n",
+    "                print('hip: ' + str(hip))\n",
     "                val = 0.0\n",
     "                if(hip < 1):\n",
     "                    val = -1\n",
     "                else:\n",
     "                    val = 0.0\n",
     "                    \n",
-    "                hip_O = val * ((self.val_clase[i[len(i)-1]] * np.array(atributos_x)) + (eta * Ot_1))\n",
-    "                hip_O0 = val * self.val_clase[i[len(i)-1]] \n",
+    "                hip_O = val * ((yi * np.array(x)) + (lamda * O[t-1]))\n",
+    "                print('hip_O: ' + str(hip_O))\n",
+    "                hip_O0 = val * yi\n",
+    "                print('hip_O0: ' + str(hip_O0))\n",
     "                \n",
     "                sumaO = sumaO + hip_O\n",
+    "                print('sumaO: ' + str(sumaO))\n",
     "                sumaO0 = sumaO0 + hip_O0\n",
+    "                print('sumaO0: ' + str(sumaO0))\n",
+    "                print('End for --------------------------------')\n",
     "         \n",
-    "            Ot = Ot_1 - (n*suma0)\n",
-    "            \n",
-    "        if(J()<E):  \n",
-    "            break \n",
-    "            \n",
-    "            #self.ajusta_pesos(clase_real,i)\n",
-    "                    \n",
-    "        #valores = np.c_[ grad_pesos, tets ]\n",
-    "        return sumaO, sumaO0\n",
+    "            Ot = O[t-1] - eta * ((1/n)*sumaO)\n",
+    "            print('Ot:' + str(Ot))\n",
+    "            Ot0 = O0[t-1] - eta * (((1/n)*sumaO0))\n",
+    "            print('Ot0:' + str(Ot0))\n",
+    "                                 \n",
+    "            O = np.insert(O, 1, Ot, axis=0)\n",
+    "            O0 = np.insert(O0, 1, Ot0, axis=0)\n",
+    "           \n",
+    "                                 \n",
+    "            cost = abs(costo(O[t],O0[t],data,n) - costo(O[t-1],O0[t-1],data,n))     \n",
+    "            print('cost: ' + str(cost))\n",
+    "        #epsilon = 0.05                         \n",
+    "        #if( cost < 0.05):\n",
+    "         #   break \n",
+    "            print(str(Ot) + ' *** ' + str(Ot0))\n",
+    "            print('End while ---------------------------------------------------------------------')\n",
+    "        #return Ot, Ot0\n",
+    "        \n",
+    "        \n",
+    "def load_data(path, header):\n",
+    "    marks_df = pd.read_csv(path, header=header)\n",
+    "    return marks_df\n",
     "\n",
-    "    def verify(self, data):\n",
-    "        count = 0\n",
-    "        for datum in data:\n",
-    "            clase_real = self.val_clase[datum[len(datum)-1]]\n",
-    "            prediccion = self.predice(datum)\n",
-    "            if clase_real != prediccion:\n",
-    "                count = count + 1\n",
-    "        return (1-count/len(data))*100\n",
-    "    \n",
-    "\n",
-    "def cross_validation(data,k):\n",
-    "    folds = np.array_split(data, k)\n",
-    "    \n",
-    "    for i in range(k):\n",
-    "        train = folds.copy() #Guarda una copia de las divisiones para las iteraciones\n",
-    "        test = folds[i]\n",
-    "        del train[i] # Remueve la división a no tomar en cuenta (Sin Si)\n",
-    "        #train = pd.concat(train, sort=False)\n",
-    "        llamar_funcion_d_g()\n",
-    "    \n",
-    "\n",
-    "def read_csv(file):\n",
-    "    with open(file,'r') as f:\n",
-    "        reader = csv.reader(f)\n",
-    "        info = []\n",
-    "        for row in reader:\n",
-    "             info.append(row)\n",
-    "\n",
-    "        for datum in info:\n",
-    "            for i in range(len(info[0])-1):\n",
-    "                datum[i] = float(datum[i])\n",
-    "    return info\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    #Cargando datos\n",
-    "    data = read_csv('iris.csv')\n",
-    "    data_iris_setosa = data[0:50]\n",
-    "    data_iris_no_setosa = data[50:150]\n",
-    "\n",
-    "    data_with_two_species = data_iris_setosa + data_iris_no_setosa\n",
-    "    clases = ['setosa', 'no_setosa']\n",
-    "    \n",
-    "    #Datos de entrenamiento\n",
-    "    datos_entrenamiento = data_with_two_species[0:80]\n",
-    "    \n",
-    "    #Datos de verificación\n",
-    "    data_validacion = data_with_two_species[:-20]\n",
-    "    \n",
-    "    X = datos_entrenamiento[:,0:4].astype(float)\n",
-    "    Y = datos_entrenamiento[:,4]\n",
-    "    print(X)\n",
-    "    print(Y)"
+    "data = load_data(\"iris_num.txt\",None)\n",
+    "data = np.array(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-263240bbee7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-4-c8aad206265d>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mdata_validacion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_with_two_species\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatos_entrenamiento\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m     \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatos_entrenamiento\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2 1. ]\n",
+      " [5.1 3.5 1.4 0.2 1. ]]\n",
+      "[5.1 3.5 1.4 0.2 1. ]\n",
+      "i[4]: 1.0\n",
+      "x: [5.1 3.5 1.4 0.2]\n",
+      "O: [0. 0. 0. 0.]\n",
+      "[5.1 3.5 1.4 0.2]\n",
+      "0.0\n",
+      "[0.]\n",
+      "hip: [0.]\n",
+      "hip_O: [-5.1 -3.5 -1.4 -0.2]\n",
+      "hip_O0: -1\n",
+      "sumaO: [-5.1 -3.5 -1.4 -0.2]\n",
+      "sumaO0: [-1.]\n",
+      "End for --------------------------------\n",
+      "[5.1 3.5 1.4 0.2 1. ]\n",
+      "i[4]: 1.0\n",
+      "x: [5.1 3.5 1.4 0.2]\n",
+      "O: [0. 0. 0. 0.]\n",
+      "[5.1 3.5 1.4 0.2]\n",
+      "0.0\n",
+      "[0.]\n",
+      "hip: [0.]\n",
+      "hip_O: [-5.1 -3.5 -1.4 -0.2]\n",
+      "hip_O0: -1\n",
+      "sumaO: [-10.2  -7.   -2.8  -0.4]\n",
+      "sumaO0: [-2.]\n",
+      "End for --------------------------------\n",
+      "Ot:[0.51 0.35 0.14 0.02]\n",
+      "Ot0:[0.1]\n",
+      "cost: [2.563]\n",
+      "[0.51 0.35 0.14 0.02] *** [0.1]\n",
+      "End while ---------------------------------------------------------------------\n",
+      "[5.1 3.5 1.4 0.2 1. ]\n",
+      "i[4]: 1.0\n",
+      "x: [5.1 3.5 1.4 0.2]\n",
+      "O: [0.51 0.35 0.14 0.02]\n",
+      "[5.1 3.5 1.4 0.2]\n",
+      "4.026\n",
+      "[0.1]\n",
+      "hip: [4.126]\n",
+      "hip_O: [0. 0. 0. 0.]\n",
+      "hip_O0: 0.0\n",
+      "sumaO: [0. 0. 0. 0.]\n",
+      "sumaO0: [0.]\n",
+      "End for --------------------------------\n",
+      "[5.1 3.5 1.4 0.2 1. ]\n",
+      "i[4]: 1.0\n",
+      "x: [5.1 3.5 1.4 0.2]\n",
+      "O: [0.51 0.35 0.14 0.02]\n",
+      "[5.1 3.5 1.4 0.2]\n",
+      "4.026\n",
+      "[0.1]\n",
+      "hip: [4.126]\n",
+      "hip_O: [0. 0. 0. 0.]\n",
+      "hip_O0: 0.0\n",
+      "sumaO: [0. 0. 0. 0.]\n",
+      "sumaO0: [0.]\n",
+      "End for --------------------------------\n",
+      "Ot:[0.51 0.35 0.14 0.02]\n",
+      "Ot0:[0.1]\n",
+      "cost: [0.]\n",
+      "[0.51 0.35 0.14 0.02] *** [0.1]\n",
+      "End while ---------------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "main()"
+    "#data_iris_setosa = data[0:50]\n",
+    "#data_iris_no_setosa = data[50:150]\n",
+    "\n",
+    "#data_with_two_species = data_iris_setosa + data_iris_no_setosa\n",
+    "    \n",
+    "#Reordenando datos aleatoriamente\n",
+    "random.shuffle(data)\n",
+    "\n",
+    "#Datos de entrenamiento\n",
+    "datos_entrenamiento = data[0:2]\n",
+    "\n",
+    "#Datos de verificación\n",
+    "data_validacion = data[:-30]\n",
+    "\n",
+    "#Llamando a gradiente por descenso\n",
+    "eta = 0.1\n",
+    "Oini = np.array([0.0, 0.0, 0.0, 0.0])\n",
+    "O0ini = np.array([0.0])\n",
+    "lamda = 0.1\n",
+    "\n",
+    "print(datos_entrenamiento)\n",
+    "descenso_x_gradiente(datos_entrenamiento, eta, Oini, O0ini, lamda)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
