Revisión conjunta y rompe loop con t >1000

--- a/Gradiente_x_descenso.ipynb
+++ b/Gradiente_x_descenso.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,61 +57,63 @@
     "            \n",
     "    return ((1/n)*suma)\n",
     "\n",
-    "def descenso_x_gradiente(data, eta, Oini, O0ini, lamda):\n",
+    "def descenso_x_gradiente(data, eta, Oini, O0ini, lamda, epsilon):\n",
     "        # Se crea arreglo para guardar los pesos que se van calculando\n",
     "        O = []\n",
     "        O0 = []\n",
     "        O.append(Oini)\n",
     "        O0.append(O0ini)\n",
     "        \n",
-    "        Ot = []\n",
-    "        Ot0 = []\n",
+    "        Ot = [0.0, 0.0, 0.0, 0.0]\n",
+    "        Ot0 = [0.0]\n",
     "        \n",
     "        n = len(data)\n",
     "        t = 0\n",
     "        \n",
-    "        my_list = [1,2]\n",
+    "        #my_list = [1,2]\n",
     "        \n",
-    "        #while True:  \n",
-    "        for j in my_list:\n",
+    "        while True:  \n",
+    "        #do{\n",
+    "        #for j in my_list:\n",
     "            t = t + 1\n",
     "            sumaO = np.array([0.0, 0.0, 0.0, 0.0])\n",
     "            sumaO0 = np.array([0.0])\n",
     "            #for i in data:\n",
     "            for i in data:\n",
-    "                print(i)\n",
-    "                print('i[4]: ' + str(i[4]))\n",
+    "                #print(i)\n",
     "                if(i[4] == 0):\n",
     "                    yi = -1\n",
     "                else:\n",
-    "                    yi = 1\n",
+    "                    yi = 1                \n",
+    "                \n",
+    "                #print('yi: ' + str(yi))\n",
     "                    \n",
     "                x = i[:len(i)-1]\n",
-    "                print('x: ' + str(x))\n",
+    "                #print('x: ' + str(x))\n",
     "                #Valida esta parte y(i)(Ø(t-1)Tx(i)+Ø0(t-1)) \n",
-    "                print('O: ' + str(O[t-1]))\n",
-    "                print(np.array(x).transpose())\n",
-    "                print(np.dot(np.array(O[t-1]).transpose(),np.array(x)))\n",
-    "                print(O0[t-1])\n",
+    "                #print('O: ' + str(O[t-1]))\n",
+    "                #print(np.array(x).transpose())\n",
+    "                #print(np.dot(np.array(O[t-1]).transpose(),np.array(x)))\n",
+    "                #print(O0[t-1])\n",
     "                hip = yi * ((np.dot(np.array(O[t-1]).transpose(),np.array(x))) + O0[t-1])\n",
-    "                print('hip: ' + str(hip))\n",
+    "                #print('hip: ' + str(hip))\n",
     "                val = 0.0\n",
     "                if(hip < 1):\n",
     "                    val = -1\n",
     "                else:\n",
     "                    val = 0.0\n",
-    "                    \n",
+    "                #print('val: ' + str(val))    \n",
     "                hip_O = val * ((yi * np.array(x)) + (lamda * O[t-1]))\n",
-    "                print('hip_O: ' + str(hip_O))\n",
+    "                #print('hip_O: ' + str(hip_O))\n",
     "                hip_O0 = val * yi\n",
-    "                print('hip_O0: ' + str(hip_O0))\n",
+    "                #print('hip_O0: ' + str(hip_O0))\n",
     "                \n",
     "                sumaO = sumaO + hip_O\n",
-    "                print('sumaO: ' + str(sumaO))\n",
+    "                #print('sumaO: ' + str(sumaO))\n",
     "                sumaO0 = sumaO0 + hip_O0\n",
-    "                print('sumaO0: ' + str(sumaO0))\n",
-    "                print('End for --------------------------------')\n",
-    "         \n",
+    "                #print('sumaO0: ' + str(sumaO0))\n",
+    "                #print('End for --------------------------------')         \n",
+    "            \n",
     "            Ot = O[t-1] - eta * ((1/n)*sumaO)\n",
     "            print('Ot:' + str(Ot))\n",
     "            Ot0 = O0[t-1] - eta * (((1/n)*sumaO0))\n",
@@ -119,16 +121,21 @@
     "                                 \n",
     "            O = np.insert(O, 1, Ot, axis=0)\n",
     "            O0 = np.insert(O0, 1, Ot0, axis=0)\n",
-    "           \n",
-    "                                 \n",
     "            cost = abs(costo(O[t],O0[t],data,n) - costo(O[t-1],O0[t-1],data,n))     \n",
     "            print('cost: ' + str(cost))\n",
-    "        #epsilon = 0.05                         \n",
-    "        #if( cost < 0.05):\n",
-    "         #   break \n",
-    "            print(str(Ot) + ' *** ' + str(Ot0))\n",
-    "            print('End while ---------------------------------------------------------------------')\n",
-    "        #return Ot, Ot0\n",
+    "            #print('t: ' + str(t))\n",
+    "                                   \n",
+    "            #Se corre el while hasta alcanzar el epsilon o las iteraciones son mayor a 1000 (para no tender a loop infinito)    \n",
+    "            if((cost < epsilon) or (t > 1000)):\n",
+    "                break \n",
+    "        \n",
+    "        #print('0: ' + str(O))\n",
+    "        print('t: ' + str(t))\n",
+    "        print('O: ' + str(O))\n",
+    "        print('O0: ' + str(O0))\n",
+    "        #print(str(Ot) + ' *** ' + str(Ot0))\n",
+    "        #print('End while ---------------------------------------------------------------------')\n",
+    "        return [O[t], O0[t]]\n",
     "        \n",
     "        \n",
     "def load_data(path, header):\n",
@@ -141,77 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[5.1 3.5 1.4 0.2 1. ]\n",
-      " [5.1 3.5 1.4 0.2 1. ]]\n",
-      "[5.1 3.5 1.4 0.2 1. ]\n",
-      "i[4]: 1.0\n",
-      "x: [5.1 3.5 1.4 0.2]\n",
-      "O: [0. 0. 0. 0.]\n",
-      "[5.1 3.5 1.4 0.2]\n",
-      "0.0\n",
-      "[0.]\n",
-      "hip: [0.]\n",
-      "hip_O: [-5.1 -3.5 -1.4 -0.2]\n",
-      "hip_O0: -1\n",
-      "sumaO: [-5.1 -3.5 -1.4 -0.2]\n",
-      "sumaO0: [-1.]\n",
-      "End for --------------------------------\n",
-      "[5.1 3.5 1.4 0.2 1. ]\n",
-      "i[4]: 1.0\n",
-      "x: [5.1 3.5 1.4 0.2]\n",
-      "O: [0. 0. 0. 0.]\n",
-      "[5.1 3.5 1.4 0.2]\n",
-      "0.0\n",
-      "[0.]\n",
-      "hip: [0.]\n",
-      "hip_O: [-5.1 -3.5 -1.4 -0.2]\n",
-      "hip_O0: -1\n",
-      "sumaO: [-10.2  -7.   -2.8  -0.4]\n",
-      "sumaO0: [-2.]\n",
-      "End for --------------------------------\n",
-      "Ot:[0.51 0.35 0.14 0.02]\n",
-      "Ot0:[0.1]\n",
-      "cost: [2.563]\n",
-      "[0.51 0.35 0.14 0.02] *** [0.1]\n",
-      "End while ---------------------------------------------------------------------\n",
-      "[5.1 3.5 1.4 0.2 1. ]\n",
-      "i[4]: 1.0\n",
-      "x: [5.1 3.5 1.4 0.2]\n",
-      "O: [0.51 0.35 0.14 0.02]\n",
-      "[5.1 3.5 1.4 0.2]\n",
-      "4.026\n",
-      "[0.1]\n",
-      "hip: [4.126]\n",
-      "hip_O: [0. 0. 0. 0.]\n",
-      "hip_O0: 0.0\n",
-      "sumaO: [0. 0. 0. 0.]\n",
-      "sumaO0: [0.]\n",
-      "End for --------------------------------\n",
-      "[5.1 3.5 1.4 0.2 1. ]\n",
-      "i[4]: 1.0\n",
-      "x: [5.1 3.5 1.4 0.2]\n",
-      "O: [0.51 0.35 0.14 0.02]\n",
-      "[5.1 3.5 1.4 0.2]\n",
-      "4.026\n",
-      "[0.1]\n",
-      "hip: [4.126]\n",
-      "hip_O: [0. 0. 0. 0.]\n",
-      "hip_O0: 0.0\n",
-      "sumaO: [0. 0. 0. 0.]\n",
-      "sumaO0: [0.]\n",
-      "End for --------------------------------\n",
-      "Ot:[0.51 0.35 0.14 0.02]\n",
-      "Ot0:[0.1]\n",
-      "cost: [0.]\n",
-      "[0.51 0.35 0.14 0.02] *** [0.1]\n",
-      "End while ---------------------------------------------------------------------\n"
+      "Ot:[-0.488675 -0.070125 -0.69575  -0.260975]\n",
+      "Ot0:[-0.055]\n",
+      "cost: [0.05009615]\n",
+      "Ot:[-0.47227812  0.30480313 -1.45138125 -0.58599062]\n",
+      "Ot0:[0.0825]\n",
+      "cost: [0.02670797]\n",
+      "t: 2\n",
+      "O: [[ 0.          0.          0.          0.        ]\n",
+      " [-0.47227812  0.30480313 -1.45138125 -0.58599062]\n",
+      " [-0.488675   -0.070125   -0.69575    -0.260975  ]]\n",
+      "O0: [[ 0.    ]\n",
+      " [ 0.0825]\n",
+      " [-0.055 ]]\n",
+      "tetas: [array([-0.488675, -0.070125, -0.69575 , -0.260975]), array([-0.055])]\n"
      ]
     }
    ],
@@ -222,27 +179,31 @@
     "#data_with_two_species = data_iris_setosa + data_iris_no_setosa\n",
     "    \n",
     "#Reordenando datos aleatoriamente\n",
-    "random.shuffle(data)\n",
+    "#random.seed(20)\n",
+    "#data = random.sample(data,1)\n",
     "\n",
     "#Datos de entrenamiento\n",
-    "datos_entrenamiento = data[0:2]\n",
+    "#print(data)\n",
+    "datos_entrenamiento = data[0:120]\n",
     "\n",
     "#Datos de verificación\n",
     "data_validacion = data[:-30]\n",
     "\n",
     "#Llamando a gradiente por descenso\n",
-    "eta = 0.1\n",
+    "eta = 0.33 #0.1-0.3 -> solo 1 t; 0.35-0.39 -> 2 t\n",
     "Oini = np.array([0.0, 0.0, 0.0, 0.0])\n",
     "O0ini = np.array([0.0])\n",
-    "lamda = 0.1\n",
+    "lamda = 10\n",
+    "epsilon = 0.05 \n",
     "\n",
-    "print(datos_entrenamiento)\n",
-    "descenso_x_gradiente(datos_entrenamiento, eta, Oini, O0ini, lamda)"
+    "#print(datos_entrenamiento)\n",
+    "tetas = descenso_x_gradiente(datos_entrenamiento, eta, Oini, O0ini, lamda, epsilon)\n",
+    "print('tetas: ' + str(tetas))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
