Función con thetas

--- a/GradEstocDes.ipynb
+++ b/GradEstocDes.ipynb
@@ -18,8 +18,7 @@
     "import csv\n",
     "from math import exp\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from colorama import Fore, Back, Style"
+    "import pandas as pd"
    ]
   },
   {
@@ -224,46 +223,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(data_iris_setosa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [],
    "source": [
     "data_with_two_species = data.sample(frac=1)"
@@ -271,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -324,44 +283,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>5.5</td>\n",
        "      <td>4.2</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>7.3</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>6.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>6.9</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -372,43 +331,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.7</td>\n",
+       "      <th>90</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.4</td>\n",
        "      <td>1.2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.8</td>\n",
+       "      <th>94</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>7.2</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
+       "      <th>55</th>\n",
        "      <td>5.7</td>\n",
        "      <td>2.8</td>\n",
-       "      <td>4.1</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>1.3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -418,22 +377,22 @@
       ],
       "text/plain": [
        "       0    1    2    3  4\n",
+       "36   5.5  3.5  1.3  0.2  1\n",
+       "20   5.4  3.4  1.7  0.2  1\n",
+       "103  6.3  2.9  5.6  1.8  0\n",
+       "23   5.1  3.3  1.7  0.5  1\n",
        "33   5.5  4.2  1.4  0.2  1\n",
-       "107  7.3  2.9  6.3  1.8  0\n",
-       "34   4.9  3.1  1.5  0.2  1\n",
-       "112  6.8  3.0  5.5  2.1  0\n",
-       "120  6.9  3.2  5.7  2.3  0\n",
        "..   ...  ...  ...  ... ..\n",
-       "73   6.1  2.8  4.7  1.2  0\n",
-       "149  5.9  3.0  5.1  1.8  0\n",
-       "18   5.7  3.8  1.7  0.3  1\n",
-       "125  7.2  3.2  6.0  1.8  0\n",
-       "99   5.7  2.8  4.1  1.3  0\n",
+       "90   5.5  2.6  4.4  1.2  0\n",
+       "94   5.6  2.7  4.2  1.3  0\n",
+       "55   5.7  2.8  4.5  1.3  0\n",
+       "50   7.0  3.2  4.7  1.4  0\n",
+       "69   5.6  2.5  3.9  1.1  0\n",
        "\n",
        "[80 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +412,7 @@
        "(80, 5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,19 +423,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0,\n",
-       "       0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0,\n",
-       "       1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1,\n",
-       "       1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0])"
+       "array([1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0,\n",
+       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,125 +456,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "theta = [0.0,0.0,0.0,0.0]"
+    "theta = np.array([0.0, 0.0, 0.0, 0.0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0, 0.0, 0.0, 0.0]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "theta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "iteraciones = 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def  fun_costo(theta,x,y,lamb):\n",
-    "\n",
-    "    y_len = len(y)\n",
-    "    predicciones = x.dot(theta)\n",
-    "    costo = (lamb/y_len) * np.sum(np.square(predicciones-y))\n",
+    "def gde(x,y,theta,lamb,iteraciones):\n",
     "    \n",
-    "    return costo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36.25"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fun_costo(theta,x,y,100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gde(x,y,theta,eta,iteraciones):\n",
+    "    y_len = len(y) # \n",
     "    \n",
-    "    y_len = len(y)\n",
-    "    costo_history = np.zeros(iteraciones)\n",
+    "    \n",
+    "    def f_perdida(theta,x,y):\n",
+    "        if (np.dot(theta,x.T)*y)<1:\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return 0\n",
     "    \n",
     "    for j in range(iteraciones):\n",
-    "        costo = 0.0\n",
-    "        for i in range(y_len):\n",
-    "            rand_int = np.random.randint(0,y_len)\n",
-    "            x_i = x[rand_int,:].reshape(1,x.shape[1])\n",
-    "            y_i = y[rand_int].reshape(1,1)\n",
-    "            prediccion = np.dot(x_i,theta)\n",
     "\n",
-    "            theta = theta-eta*(x_i.T.dot((prediccion - y_i)))\n",
-    "            costo += fun_costo(theta,x_i,y_i,10)\n",
-    "        costo_history[j]  = costo\n",
+    "        rand_int = np.random.randint(0,y_len) # elige el dato al azar entre cero y y_len\n",
+    "        x_i=x[rand_int,:].reshape(1,x.shape[1])\n",
+    "        y_i=y[rand_int].reshape(1,1)\n",
+    "        theta=theta-(1/y_len)*(f_perdida(theta,x_i,y_i)*y_i@x_i+(lamb/2)*(np.linalg.norm(theta)**2))\n",
     "        \n",
-    "    return theta\n",
-    "    print(theta)"
+    "    return theta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.08263436,  0.08263436,  0.08263436,  0.08263436],\n",
-       "       [ 0.25660219,  0.25660219,  0.25660219,  0.25660219],\n",
-       "       [-0.24485585, -0.24485585, -0.24485585, -0.24485585],\n",
-       "       [-0.01312207, -0.01312207, -0.01312207, -0.01312207]])"
+       "array([[0.18775838, 0.12900838, 0.05400838, 0.00525838]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gde(x, y, theta, 0.001, iteraciones)"
+    "gde(x, y, theta,lamb=0.01,iteraciones=1000)"
    ]
   },
   {
