--- a/GradEstocDes.ipynb
+++ b/GradEstocDes.ipynb
@@ -283,12 +283,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
+       "      <th>92</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -299,26 +299,26 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.9</td>\n",
+       "      <th>69</th>\n",
        "      <td>5.6</td>\n",
-       "      <td>1.8</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1</td>\n",
+       "      <th>115</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.4</td>\n",
+       "      <th>25</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.6</td>\n",
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -331,43 +331,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>4.7</td>\n",
+       "      <th>45</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.1</td>\n",
+       "      <th>117</th>\n",
+       "      <td>7.7</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>6.6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -377,17 +377,17 @@
       ],
       "text/plain": [
        "       0    1    2    3  4\n",
-       "36   5.5  3.5  1.3  0.2  1\n",
+       "92   5.8  2.6  4.0  1.2  0\n",
        "20   5.4  3.4  1.7  0.2  1\n",
-       "103  6.3  2.9  5.6  1.8  0\n",
-       "23   5.1  3.3  1.7  0.5  1\n",
-       "33   5.5  4.2  1.4  0.2  1\n",
-       "..   ...  ...  ...  ... ..\n",
-       "90   5.5  2.6  4.4  1.2  0\n",
-       "94   5.6  2.7  4.2  1.3  0\n",
-       "55   5.7  2.8  4.5  1.3  0\n",
-       "50   7.0  3.2  4.7  1.4  0\n",
        "69   5.6  2.5  3.9  1.1  0\n",
+       "115  6.4  3.2  5.3  2.3  0\n",
+       "25   5.0  3.0  1.6  0.2  1\n",
+       "..   ...  ...  ...  ... ..\n",
+       "45   4.8  3.0  1.4  0.3  1\n",
+       "86   6.7  3.1  4.7  1.5  0\n",
+       "117  7.7  3.8  6.7  2.2  0\n",
+       "70   5.9  3.2  4.8  1.8  0\n",
+       "75   6.6  3.0  4.4  1.4  0\n",
        "\n",
        "[80 rows x 5 columns]"
       ]
@@ -429,10 +429,10 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0,\n",
-       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0,\n",
-       "       0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+       "array([0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1,\n",
+       "       1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1,\n",
+       "       1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0])"
       ]
      },
      "execution_count": 11,
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,11 +465,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gde(x,y,theta,lamb,iteraciones):\n",
+    "def gde(x,y,theta,lamb,eta,iteraciones):\n",
     "    \n",
     "    y_len = len(y) # \n",
     "    \n",
@@ -485,29 +485,29 @@
     "        rand_int = np.random.randint(0,y_len) # elige el dato al azar entre cero y y_len\n",
     "        x_i=x[rand_int,:].reshape(1,x.shape[1])\n",
     "        y_i=y[rand_int].reshape(1,1)\n",
-    "        theta=theta-(1/y_len)*(f_perdida(theta,x_i,y_i)*y_i@x_i+(lamb/2)*(np.linalg.norm(theta)**2))\n",
+    "        theta=theta-(eta)*(f_perdida(theta,x_i,y_i)*y_i@x_i+(lamb/y_len)*theta)\n",
     "        \n",
     "    return theta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.18775838, 0.12900838, 0.05400838, 0.00525838]])"
+       "array([[0.49379503, 0.34565652, 0.15801441, 0.0592554 ]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gde(x, y, theta,lamb=0.01,iteraciones=1000)"
+    "gde(x, y, theta,lamb=0.01,eta=0.1,iteraciones=1000)"
    ]
   },
   {
