--- a/GradEstocDes.ipynb
+++ b/GradEstocDes.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Datos hola"
+    "Datos "
    ]
   },
   {
@@ -283,44 +283,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>4.0</td>\n",
+       "      <th>73</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>4.7</td>\n",
        "      <td>1.2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.7</td>\n",
+       "      <th>9</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>5.6</td>\n",
+       "      <th>113</th>\n",
+       "      <td>5.7</td>\n",
        "      <td>2.5</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>6.4</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
        "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -331,44 +331,44 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>74</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>7.7</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>5.9</td>\n",
+       "      <th>125</th>\n",
+       "      <td>7.2</td>\n",
        "      <td>3.2</td>\n",
-       "      <td>4.8</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>1.8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>6.6</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>15</th>\n",
+       "      <td>5.7</td>\n",
        "      <td>4.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>5.2</td>\n",
+       "      <td>3.4</td>\n",
        "      <td>1.4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -377,17 +377,17 @@
       ],
       "text/plain": [
        "       0    1    2    3  4\n",
-       "92   5.8  2.6  4.0  1.2  0\n",
-       "20   5.4  3.4  1.7  0.2  1\n",
-       "69   5.6  2.5  3.9  1.1  0\n",
-       "115  6.4  3.2  5.3  2.3  0\n",
-       "25   5.0  3.0  1.6  0.2  1\n",
+       "73   6.1  2.8  4.7  1.2  0\n",
+       "9    4.9  3.1  1.5  0.1  1\n",
+       "36   5.5  3.5  1.3  0.2  1\n",
+       "113  5.7  2.5  5.0  2.0  0\n",
+       "100  6.3  3.3  6.0  2.5  0\n",
        "..   ...  ...  ...  ... ..\n",
-       "45   4.8  3.0  1.4  0.3  1\n",
-       "86   6.7  3.1  4.7  1.5  0\n",
-       "117  7.7  3.8  6.7  2.2  0\n",
-       "70   5.9  3.2  4.8  1.8  0\n",
-       "75   6.6  3.0  4.4  1.4  0\n",
+       "74   6.4  2.9  4.3  1.3  0\n",
+       "125  7.2  3.2  6.0  1.8  0\n",
+       "15   5.7  4.4  1.5  0.4  1\n",
+       "21   5.1  3.7  1.5  0.4  1\n",
+       "28   5.2  3.4  1.4  0.2  1\n",
        "\n",
        "[80 rows x 5 columns]"
       ]
@@ -429,10 +429,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1,\n",
-       "       1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1,\n",
-       "       1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0])"
+       "array([0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0,\n",
+       "       1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+       "       1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1])"
       ]
      },
      "execution_count": 11,
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,29 +485,82 @@
     "        rand_int = np.random.randint(0,y_len) # elige el dato al azar entre cero y y_len\n",
     "        x_i=x[rand_int,:].reshape(1,x.shape[1])\n",
     "        y_i=y[rand_int].reshape(1,1)\n",
-    "        theta=theta-(eta)*(f_perdida(theta,x_i,y_i)*y_i@x_i+(lamb/y_len)*theta)\n",
+    "        theta=theta-(eta)*y_i@x_i*(f_perdida(theta,x_i,y_i)+(lamb/2)*np.linalg.norm(theta)**2)\n",
     "        \n",
     "    return theta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.49379503, 0.34565652, 0.15801441, 0.0592554 ]])"
+       "array([[0.14928686, 0.10211039, 0.0432176 , 0.00687095]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gde(x, y, theta,lamb=0.01,eta=0.1,iteraciones=1000)"
+    "gde(x, y, theta,lamb=0.01,eta=0.01,iteraciones=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gde()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f_perdida(theta,x,y):\n",
+    "    if (np.dot(theta,x.T)*y)<1:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand_int = np.random.randint(0,80) # elige el dato al azar entre cero y y_len\n",
+    "x_i=x[rand_int,:].reshape(1,x.shape[1])\n",
+    "y_i=y[rand_int].reshape(1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_perdida(theta,x_i,y_i)"
    ]
   },
   {
